# geary

./: CMakeLists.txt  INSTALL.md  README.md  meson.build  meson_options.txt
bindings/vapi/: webkitgtk-3.0.vapi
desktop/: geary-autostart.desktop.in  geary.appdata.xml.in  geary.desktop.in  meson.build  org.yorba.geary.gschema.xml
help/: meson.build
icons/: meson.build
po/: POTFILES  POTFILES.in  meson.build
src/: geary-version.vala  meson.build
src/client/application/: geary-application.vala  geary-controller.vala  secret-mediator.vala
src/client/notification/: libmessagingmenu.vala
src/client/util/: util-webkit.vala
src/client/web-process/: web-process-extension.vala
src/engine/api/: geary-account-information.vala
src/engine/imap-db/: imap-db-account.vala
src/engine/imap-engine/: imap-engine-account-synchronizer.vala.rej
src/engine/util/: util-js.vala
src/sqlite3-unicodesn/: meson.build
ui/: geary-resources.xml  meson.build
